Hide emails API wip
